# Logistics-Insight-Hub

./: .gitignore  .replit  README.md  app.py  freight_data.csv  logistics.db-shm  logistics.db-wal  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
.streamlit/: config.toml
artifacts/api-server/: package.json
artifacts/api-server/src/: db.ts  rates.ts  seed-samples.ts
artifacts/api-server/src/routes/: analytics.ts  extract.ts  freight.ts  index.ts
artifacts/logistics-engine/: freight_data.csv  index.html  package.json
artifacts/logistics-engine/.replit-artifact/: artifact.toml
artifacts/logistics-engine/src/: App.tsx  index.css  main.tsx
artifacts/logistics-engine/src/components/: ChatTab.tsx  DataLakeTab.tsx  Sidebar.tsx
artifacts/logistics-engine/src/lib/: api.ts
attached_assets/: Pasted-1-Problem-Statement-Current-logistics-data-lakes-act-as_1776943355265.txt  Pasted-1-The-Two-Table-Relational-Schema-You-should-use-a-Head_1777014934035.txt
