[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "streamlit>=1.56.0",
]
